[gd_scene load_steps=16 format=3 uid="uid://dcfhskjw76qq3"]

[ext_resource type="Script" path="res://player_projectileSecondary.gd" id="1_6bn8f"]
[ext_resource type="Texture2D" uid="uid://d0c1wtyv5l07k" path="res://Assets/Graphics/sprites/sprites_general.png" id="2_6lbtn"]
[ext_resource type="AudioStream" uid="uid://dyody04ey8rq8" path="res://Assets/Sounds/sfx/effect_break.wav" id="3_wgx0h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ygiy4"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1632, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5odm0"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1632, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0usad"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1664, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ma5"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1696, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_386u2"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1728, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnhrp"]
atlas = ExtResource("2_6lbtn")
region = Rect2(1760, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5u2hm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygiy4")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5odm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0usad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ma5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_386u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnhrp")
}],
"loop": false,
"name": &"hit_ground",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3507k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2p6nt"]
resource_name = "moveV_loop"
length = 4.0
loop_mode = 1
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(64, -0.25, 0, 0.998436, -1, -64, -1, 0.5, 1.1, -0.5, 64, -1.08824, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(64, -0.25, 0, 0.998436, -1, -64, -1, 0.5, 1.1, -0.5, 64, -1.08824, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1356v"]
_data = {
"RESET": SubResource("Animation_3507k"),
"moveV_loop": SubResource("Animation_2p6nt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk7p3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3dwm"]
size = Vector2(24, 24)

[node name="projectileSecondary_fast" type="CharacterBody2D"]
z_index = 1
collision_layer = 0
safe_margin = 1.0
script = ExtResource("1_6bn8f")
destructible_anyWeapon = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.313726, 1, 0.517647, 1)
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_5u2hm")
animation = &"falling"
autoplay = "falling"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_1356v")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_gk7p3")

[node name="Area2D" type="Area2D" parent="." groups=["player_projectile"]]
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_y3dwm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wgx0h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.57764e-05, -32)
scale = Vector2(38.4, 35.2)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
